traefik-gateway-api/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: HTTPRoute
metadata:
  name: grafana-route
  namespace: traefik
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
      kind: Gateway
  hostnames: ["grafana.local.ertia.cloud"]
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: monitoring-grafana
          port: 80
          weight: 1
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: Gateway
metadata:
  name: traefik-gateway
  namespace: traefik
  annotations:
    cert-manager.io/issuer: letsencrypt-selfsigned
spec:
  gatewayClassName: traefik-gateway
  listeners:
    - name: http
      hostname: "*.local.ertia.cloud"
      port: 443
      protocol: HTTPS
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: grafana-tls
